--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
             <p class="projects__row-content-desc">
               This project was made using HTML, CSS and Bootstrap.
             </p>
-            <a href="https://fastfood-theta.vercel.app/home" class="btn btn--med btn--theme dynamicBgClr" target="_blank">Go to website</a>
+            <a href="https://mariangela-gomez.github.io/tangotravel/" class="btn btn--med btn--theme dynamicBgClr" target="_blank">Go to website</a>
           </div>
         </div>
         <div class="projects__row">
@@ -172,7 +172,7 @@
             <p class="projects__row-content-desc">
               This project was made using React Js
             </p>
-            <a href="./project-2.html" class="btn btn--med btn--theme dynamicBgClr" target="_blank">Go to website</a>
+            <a href="https://fastfood-theta.vercel.app/home" class="btn btn--med btn--theme dynamicBgClr" target="_blank">Go to website</a>
           </div>
         </div>
         <div class="projects__row">
