--- a/index.html
+++ b/index.html
@@ -7,16 +7,16 @@
   <meta http-equiv="X-UA-Compatible" content="ie=edge" />
   <title>Mariangela Gomez</title>
   <meta name="description" content="Portfolio" />
-
+  <!-- styles -->
   <link rel="stylesheet" href="css/style.css" />
-
+<!-- Fonts -->
   <link rel="preconnect" href="https://fonts.googleapis.com" />
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
   <link href="https://fonts.googleapis.com/css2?family=Source+Sans+Pro:wght@400;600;700;900&display=swap"
     rel="stylesheet" />
 </head>
-
 <body>
+  <!-- Header & Nav -->
   <header class="header">
     <div class="header__content">
       <div class="header__logo-container">
@@ -71,6 +71,7 @@
       </div>
     </div>
   </header>
+  <!-- Main -->
   <section class="home-hero">
     <div class="home-hero__content">
       <h1 class="heading-primary">Hey, My name is Mariangela Gomez</h1>
@@ -103,7 +104,6 @@
     <div class="main-container">
       <h2 class="heading heading-sec heading-sec__mb-med">
         <span class="heading-sec__main">About Me</span>
-
       </h2>
       <div class="about__content">
         <div class="about__content-main">
@@ -122,6 +122,7 @@
             </p>
           </div>
         </div>
+        <!-- Skills -->
         <div class="about__content-skills">
           <h3 class="about__content-title">My Skills</h3>
           <div class="skills">
@@ -141,6 +142,7 @@
       </div>
     </div>
   </section>
+  <!-- Projects -->
   <section id="projects" class="projects sec-pad">
     <div class="main-container">
       <h2 class="heading heading-sec heading-sec__mb-bg">
@@ -153,43 +155,57 @@
       <div class="projects__content">
         <div class="projects__row">
           <div class="projects__row-img-cont">
-            <img src="./assets/jpeg/project-1.png" alt="Software Screenshot" class="projects__row-img"
-              loading="lazy" />
+            <img src="./assets/jpeg/project-1.png" alt="Software Screenshot" class="projects__row-img" loading="lazy" />
           </div>
           <div class="projects__row-content">
             <p class="projects__row-content-desc">
               This project was made using HTML, CSS and Bootstrap.
             </p>
-            <a href="https://mariangela-gomez.github.io/tangotravel/" class="btn btn--med btn--theme dynamicBgClr" target="_blank">Go to website</a>
+            <a href="https://fastfood-theta.vercel.app/home" class="btn btn--med btn--theme dynamicBgClr"
+              target="_blank">Go to website</a>
           </div>
         </div>
         <div class="projects__row">
           <div class="projects__row-img-cont">
-            <img src="./assets/jpeg/project-2.png" alt="Software Screenshot" class="projects__row-img"
-              loading="lazy" />
+            <img src="./assets/jpeg/project-2.png" alt="Software Screenshot" class="projects__row-img" loading="lazy" />
           </div>
           <div class="projects__row-content">
             <p class="projects__row-content-desc">
               This project was made using React Js
             </p>
-            <a href="https://fastfood-theta.vercel.app/home" class="btn btn--med btn--theme dynamicBgClr" target="_blank">Go to website</a>
+            <a href="https://fastfood-theta.vercel.app/home" class="btn btn--med btn--theme dynamicBgClr"
+              target="_blank">Go to website</a>
           </div>
         </div>
         <div class="projects__row">
           <div class="projects__row-img-cont">
-            <img src="./assets/jpeg/project-3.png" alt="Software Screenshot" class="projects__row-img"
-              loading="lazy" />
+            <img src="./assets/jpeg/project-3.png" alt="Software Screenshot" class="projects__row-img" loading="lazy" />
           </div>
           <div class="projects__row-content">
             <p class="projects__row-content-desc">
               This project was made using HTML, CSS, JavaScript and Bootstrap.
             </p>
-            <a href="#" class="btn btn--med btn--theme dynamicBgClr" target="_blank">Go to website</a>
+            <a href="https://mariangela-gomez.github.io/proyectoweb/index.html" class="btn btn--med btn--theme dynamicBgClr" target="_blank">Go to website</a>
           </div>
+        </div>
+      <div class="projects__row">
+        <div class="projects__row-img-cont">
+          <img src="./assets/jpeg/project-4.jpg" alt="Software Screenshot" class="projects__row-img" loading="lazy" />
+        </div>
+        <div class="projects__row-content">
+          <p class="projects__row-content-desc">
+            This project was made using React and Firebase.
+          </p>
+          <a href="https://keen-dasik-e95a65.netlify.app/" class="btn btn--med btn--theme dynamicBgClr"
+            target="_blank">Go to website</a>
         </div>
       </div>
     </div>
+    </div>
   </section>
+
+  <!-- contact -->
+
   <section id="contact" class="contact sec-pad dynamicBg">
     <div class="main-container">
       <h2 class="heading heading-sec heading-sec__mb-med">
@@ -220,9 +236,9 @@
     </div>
   </section>
   <footer class="main-footer">
-      <div class="main-footer__lower">
-        &copy; Copyright 2023. Made by Mariangela Gomez</a>
-      </div>
+    <div class="main-footer__lower">
+      &copy; Copyright 2023. Made by Mariangela Gomez</a>
+    </div>
     </div>
   </footer>
 
